@@ -26,6 +26,8 @@ README.md
 t/10-pod-readme-filter.t
 t/20-pod-readme.t
 t/data/META-1.yml
+t/data/README-1.pod
+t/data/README.txt
 t/lib/Pod/Readme/Plugin/noop.pm
 t/lib/Pod/Readme/Test.pm
 t/plugins/changes.t
