@@ -1,6 +1,9 @@
 Revision history for Pod-Readme
 
 v1.0.0_02
+  [Enhancements]
+  - Added parse_from_file method for backwards compatability.
+
   [Other Changes]
   - Added more tests.
 
